# NKLang

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json
docs/documentation/: main.nk  parser.nk
include/: nkpch.h
include/core/: defines.h  error_handling.h  expression.h  json.h  lexer.h  map_macro.h  parser.h  token-old.h  token.h  token_keyword_map.h
include/system/: assert_system.h  file_system.h  logging_system.h
resources/documentation/: first_program.nk  my_lang.nk
resources/examples/: example.nk
src/: main.cpp
src/core/: lexer.cpp  parser.cpp
src/system/: file_system.cpp  logging_system.cpp
tests/: CMakeLists.txt
tests/src/core/: lexer.cpp
